# system_solver

./: .gitignore  AGENTS.md  Cargo.toml
dynamics_example/: AGENTS.md  Cargo.toml  README.md
dynamics_example/src/: params.rs
dynamics_example/src/constraints/: aerial.rs  integrate.rs  jump.rs  mod.rs  run.rs
dynamics_example/src/dynamics/: air.rs  ground.rs  mod.rs  state.rs  test_params.rs  wall_and_slope.rs
examples/dynamics/: Cargo.toml  main.rs
examples/dynamics/src/: lib.rs  params.rs
examples/dynamics/src/constraints/: aerial.rs  integrate.rs  jump.rs  mod.rs  run.rs
examples/dynamics/src/dynamics/: air.rs  ground.rs  mod.rs  state.rs  test_params.rs  wall_and_slope.rs
src/: error.rs  lib.rs
src/equation_system/: mod.rs  objective.rs  opt_tools.rs  param_traits.rs  solution_plan.rs
src/equation_system/residuals/: residuals.rs  transformation_hof.rs
src/equation_system/sub_problem/: argmin_impls.rs  sub_problem.rs
src/equation_system/sub_problem/solve_subproblem/: gauss_newton.rs  lbfgs.rs  mod.rs  simulated_annealing.rs  solver_run_log_data.rs
src/equation_system/tests/: param_scaling.rs
system_solver/: Cargo.toml  README.md
system_solver/proptest-regressions/equation_system/tests/: param_scaling.txt
system_solver/src/: lib.rs  main.rs
system_solver/src/equation_system/: objective.rs  opt_tools.rs  param_scaling.rs  solution_plan.rs
system_solver/src/equation_system/residuals/: aggregation_hof.rs  mod.rs  residuals.rs
system_solver/src/equation_system/sub_problem/: mod.rs  pso_solve.rs  sub_problem.rs
system_solver/src/equation_system/sub_problem/solve_subproblem/: simulated_annealing.rs  solver_run_log_data.rs
system_solver/src/equation_system/tests/: mod.rs  param_scaling.rs
