[package]
name = "player_dynamics"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["lib"]

[[bin]]
name = "dynamics_example"
path = "main.rs"

[dependencies]
struct_to_array = "0.1.1"
nalgebra = "0.34"
ad_trait = { git = "https://github.com/bcolloran/ad_trait.git", branch = "main" }
system_solver = { path = ".." }
field_names = "0.2.0"

[dev-dependencies]
test-case = "3.3.1"
