[package]
name = "dynamics_example"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["lib"]

[[bin]]
name = "dynamics_example"
path = "main.rs"

[dependencies]
system_solver = { path = "../.." }
struct_to_array = "0.1.1"
field_names_and_counts = "0.1.0"


[dev-dependencies]
test-case = "3.3.1"
